--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,14 +1,33 @@
-*{
-  box-sizing: border-box;
+body{
+  background-color: #eee;
   margin: 0;
-  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-:any-link{
-  text-decoration: none;
+h1{
+  text-align: center;
+  padding: 20px;
+  margin: 0 0 50px;
+  background-color: white;
+  position: relative;
+  color: #18ba89;
+  &::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3px;
+    background-image:linear-gradient(to right,
+    #f89e13 0%,
+    #f89e13 30%,
+    #18ba89 30%,
+    #18ba89 70%,
+    #27303f 70%,
+    );
+    display: block;
+  }
 }
-ul{
-  list-style: none;
-}
-.container{
-  background-color: red;
-}
+
+
+// $colorsCheck:red;
+
