--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,37 @@
-@use "abstracts/" as *;
 @use "base/" as *;
+@use "abstracts/" as *;
 
-.index{
-  background-color: red;
-}
-.main{
-  background-color: red;
+.guess-game{
+  text-align: center;
+  width: 1000px;
+  margin: 20px auto;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  .game-area{
+    text-align: center;
+  }
+  .key-colors{
+    h2{
+      margin-bottom: 15px;
+    }
+    .key-color{
+      display: flex;
+      align-items: center;
+      padding: 15px;
+      background-color: white;
+      margin-bottom: 14px;
+      .key{
+        @include colorC;
+        width: 30px;
+        height: 30px;
+        border-radius: 4px;
+        margin-right: 10px;
+      }
+      .key-text{
+        font-size: 16px;
+        font-family: bold;
+      }
+    }
+  }
 }
