--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,7 +10,46 @@
   align-items: flex-start;
   justify-content: space-between;
   .game-area {
-    text-align: center;
+    .inputs{
+      > div{
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        span{
+          font-size: 30px;
+          margin-right: 15px;
+          font-weight: bold;
+        }
+      }
+      .disabled-inputs{
+        opacity: 0.5;
+        pointer-events: none;
+      }
+      input{
+        margin: 0 5px;
+        width: 60px;
+        height: 60px;
+        border-radius: 4px;
+        text-align: center;
+        font-size: 50px;
+        caret-color: $primary-color;
+        background-color: white;
+        border: none;
+        border-bottom: 3px solid #333;
+        &:focus{
+          outline:2px solid #333;
+        }
+        @each $class,$color in $colorsC{
+          &.#{$class}{
+            background-color: $color;
+            color: white;
+            outline-color: $color;
+            border: none;
+          }
+        }
+      }
+    }
   }
   .key-colors {
     h2 {
@@ -22,6 +61,7 @@
       padding: 15px;
       background-color: white;
       margin-bottom: 14px;
+      border-radius: 4px;
       .key {
         @each $class, $color in $colorsC {
           &.#{$class} {
