--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,23 +10,23 @@
   align-items: flex-start;
   justify-content: space-between;
   .game-area {
-    .inputs{
-      > div{
+    .inputs {
+      > div {
         margin-bottom: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
-        span{
+        span {
           font-size: 30px;
           margin-right: 15px;
           font-weight: bold;
         }
       }
-      .disabled-inputs{
+      .disabled-inputs {
         opacity: 0.5;
         pointer-events: none;
       }
-      input{
+      input {
         margin: 0 5px;
         width: 60px;
         height: 60px;
@@ -37,16 +37,46 @@
         background-color: white;
         border: none;
         border-bottom: 3px solid #333;
-        &:focus{
-          outline:2px solid #333;
+        &:focus {
+          outline: 2px solid #333;
         }
-        @each $class,$color in $colorsC{
-          &.#{$class}{
+        @each $class, $color in $colorsC {
+          &.#{$class} {
             background-color: $color;
             color: white;
             outline-color: $color;
             border: none;
           }
+        }
+      }
+    }
+    .control {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      button{
+        padding: 6px 10px;
+        font-size: 23px;
+        font-weight: bold;
+        border: none;
+        border-radius: 4px;
+        color: white;
+        transition: background-color .3s,scale .2s;
+        cursor: pointer;
+        &:active{
+          scale: .97;
+        }
+        &:hover{
+          opacity: .9;
+        }
+        &.check{
+          background-color: $primary-color;
+          flex-shrink: 1;
+          width: 65%;
+        }
+        &.hint{
+          width: 30%;
+          background-color: #009688;
         }
       }
     }
@@ -80,5 +110,3 @@
     }
   }
 }
-
-
