--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,23 @@
 @use "abstracts/" as *;
 @use "layout";
 
+.load{
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  backdrop-filter: blur(30px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 111;
+  animation: load 2s;
+  animation-iteration-count: 1;
+}
+@keyframes load {
+  100%{
+    backdrop-filter: blur(0);
+  }
+}
 .guess-game {
   text-align: center;
   width: 1000px;
