--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,11 @@
 .load {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  color: #009688;
   background-color: transparent;
   backdrop-filter: blur(30px);
   position: absolute;
@@ -17,6 +22,7 @@
 @keyframes load {
   100% {
     backdrop-filter: blur(0);
+    color: transparent;
   }
 }
 .guess-game {
@@ -67,18 +73,18 @@
         }
       }
     }
-    .message{
+    .message {
       margin-block: 20px;
       font-size: 25px;
       text-transform: capitalize;
-      span{
+      span {
         color: white;
         padding: 3px 4px;
         border-radius: 4px;
-        &.correct{
-        background-color: $in-place;
+        &.correct {
+          background-color: $in-place;
         }
-        &.no{
+        &.no {
           background-color: #333;
         }
       }
@@ -103,18 +109,18 @@
           background-color: $primary-color;
           flex-shrink: 1;
           width: 65%;
-          &:disabled{
+          &:disabled {
             cursor: no-drop;
             background-color: #333;
-            opacity: .5;
+            opacity: 0.5;
           }
         }
         &.hint {
           width: 30%;
           background-color: #009688;
-          &:disabled{
+          &:disabled {
             background-color: #333;
-            opacity: .5;
+            opacity: 0.5;
             cursor: no-drop;
           }
         }
